--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -17,6 +17,7 @@
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:paddingLeft="10dp"
+        android:paddingRight="30dp"
         android:singleLine="true"
         android:textColorHint="@color/offWhite" />
 
@@ -34,10 +35,28 @@
         android:hint="@string/password"
         android:inputType="textPassword"
         android:paddingLeft="10dp"
+        android:paddingRight="30dp"
         android:singleLine="true"
         android:textColor="@color/offWhite"
         android:textColorHint="@color/offWhite" />
 
+    <CheckBox
+        android:id="@+id/cb_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/password"
+        android:layout_below="@id/email"
+        android:layout_marginTop="10dp"
+         />
+
+    <CheckBox
+        android:id="@+id/cb_confirm_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/connfirm_password"
+        android:layout_below="@id/password"
+        android:layout_marginTop="10dp"
+        />
     <EditText
         android:id="@+id/connfirm_password"
         android:layout_width="match_parent"
